--- a/lang/it.json
+++ b/lang/it.json
@@ -13,13 +13,13 @@
         "Config": {
             "Title": "Exotik Dices – Configurazione",
             "Hint": "Gestisci i tuoi dadi personalizzati. Ogni dado viene registrato come denominazione tirabile (es. /r 1dh).",
-            "AddDie": "Aggiungi Dado",
+            "AddDice": "Aggiungi Dado",
             "NoDice": "Nessun dado definito. Clicca \"Aggiungi Dado\" per creare il tuo primo dado esotico.",
             "FacesLabel": "facce",
             "Edit": "Modifica",
             "Delete": "Elimina",
             "DeleteConfirm": "Sei sicuro di voler eliminare \"{name}\"?",
-            "DieSaved": "Dado \"{name}\" salvato.",
+            "DiceSaved": "Dado \"{name}\" salvato.",
             "ReloadRequired": "Ricaricamento Necessario",
             "ReloadRequiredMsg": "La configurazione dei dadi è cambiata. È necessario ricaricare il mondo per applicare le modifiche.",
             "ReloadNow": "Ricarica Ora",
@@ -29,6 +29,7 @@
         "Editor": {
             "TitleNew": "Nuovo Dado",
             "TitleEdit": "Modifica Dado: {name}",
+            "BackToList": "Torna alla lista",
             "Name": "Nome",
             "NameHint": "Nome visualizzato per questo tipo di dado.",
             "Denomination": "Denominazione",
@@ -43,7 +44,9 @@
             "FaceLabel": "Etichetta",
             "FaceTexture": "Texture (3D)",
             "FaceBump": "Bump Map (3D)",
-            "FaceIcon": "Icona Chat"
+            "FaceIcon": "Icona Chat",
+            "AssetFolder": "Cartella Asset",
+            "AssetFolderHint": "Le cartelle vengono create automaticamente al salvataggio. Posiziona le immagini nella sottocartella appropriata."
         },
 
         "Validation": {
