--- a/lang/it.json
+++ b/lang/it.json
@@ -27,7 +27,8 @@
             "README": "README",
             "HintNote": "Attenzione: con questo modulo non \u00e8 possibile creare dadi standard a numerazione (per cui esiste gi\u00e0 l\u2019ottimo Dice So Nice), ma solo dadi con simboli. I risultati vengono raggruppati per tipo, ad es. 2\u00d7\u2665 1\u00d7\u2666 3\u00d7\u2660.",
             "Export": "Esporta",
-            "Refresh": "Aggiorna dadi"
+            "Refresh": "Aggiorna dadi",
+            "DefaultProtected": "Il dado predefinito non può essere eliminato."
         },
 
         "Export": {
