--- a/lang/en.json
+++ b/lang/en.json
@@ -32,7 +32,9 @@
             "HintNote": "Note: this module creates symbol dice only (not standard numbered dice, for which Dice So Nice already works great). Results are grouped by type, e.g. 2\u00d7\u2665 1\u00d7\u2666 3\u00d7\u2660.",
             "Export": "Export",
             "Refresh": "Refresh dice",
-            "DefaultProtected": "The default dice cannot be deleted."
+            "DefaultProtected": "The default dice cannot be deleted.",
+            "FolderAddHint": "<strong>Add dice:</strong> create a subfolder containing a <code>dice.json</code> in <code>{path}</code>, then click Refresh or reload the world.",
+            "FolderRemoveHint": "<strong>Remove dice:</strong> delete the corresponding subfolder from <code>{path}</code>, then reload the world."
         },
 
         "Export": {
