--- a/lang/en.json
+++ b/lang/en.json
@@ -24,17 +24,13 @@
             "DeleteConfirm": "Are you sure you want to delete \"{name}\"?",
             "DeleteFolderHint": "The dice folder will remain on disk. Remove it manually to complete deletion.",
             "DiceSaved": "Dice \"{name}\" saved.",
-            "ReloadRequired": "Reload Required",
-            "ReloadRequiredMsg": "Dice configuration changed. A world reload is required for changes to take effect.",
-            "ReloadNow": "Reload Now",
-            "ReloadLater": "Later",
             "README": "README",
             "HintNote": "Note: this module creates symbol dice only (not standard numbered dice, for which Dice So Nice already works great). Results are grouped by type, e.g. 2\u00d7\u2665 1\u00d7\u2666 3\u00d7\u2660.",
             "Export": "Export",
             "Refresh": "Refresh dice",
             "DefaultProtected": "The default dice cannot be deleted.",
-            "FolderAddHint": "<strong>Add dice:</strong> create a subfolder containing a <code>dice.json</code> in <code>{path}</code>, then click Refresh or reload the world.",
-            "FolderRemoveHint": "<strong>Remove dice:</strong> delete the corresponding subfolder from <code>{path}</code>, then reload the world."
+            "FolderAddHint": "<strong>Add dice:</strong> create a subfolder containing a <code>dice.json</code> in <code>{path}</code>, then click Refresh.",
+            "FolderRemoveHint": "<strong>Remove dice:</strong> delete the corresponding subfolder from <code>{path}</code>, then click Refresh."
         },
 
         "Export": {
@@ -44,6 +40,7 @@
 
         "Import": {
             "Success": "{count} dice(s) synced from filesystem.",
+            "Synced": "Dice updated from filesystem.",
             "NoneFound": "Filesystem and cache are in sync. No changes detected.",
             "DenomConflict": "Cannot load \"{name}\": denomination \"{denom}\" is already used by \"{existing}\"."
         },
